# kicker-elo

./: .gitignore  .gitmodules  DEPLOY  TODO  cup.sources  dtfb-league.sources  tfvb-league-2023.sources  tfvb-league.sources
app/: CMakeLists.txt  app.cpp  app.hpp  database.cpp  database.hpp  database_orm.hpp  elo.xml  global.cpp  global.hpp  infopopup.cpp  infopopup.hpp  main.cpp  playerwidget.cpp  playerwidget.hpp  rankingwidget.cpp  rankingwidget.hpp  util.cpp  util.hpp
app/docroot/: elo-style.css  style.css
scraper/: database.cpp  database.hpp  downloader.cpp  downloader.hpp  league.cpp  league.hpp  main.cpp  pretty.cpp  pretty.hpp  rating.cpp  rating.hpp  scraper.pro  scrapeutil.cpp  scrapeutil.hpp  tournament.cpp  tournament.hpp
